Bug 1606744 - Add a default region subtag to the system locale code if GlobalizationPreferences returns a bare language code, to avoid problems with DirectWrite localized font-name API. r=emk

Differential Revision: https://phabricator.services.mozilla.com/D58632